--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
-#          pip install -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Run unit tests
         #run: python -m pytest -v test/*
