--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Run unit tests
         #run: python -m pytest -v test/*
-        run: python -m pytest -v
+        run: python3 -m pytest -v
                                    
