--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
 dynamic = ["version", "description"]
 dependencies = [
-    "pytest", "scipy", "matplotlib", "numpy", "sklearn"
+    "pytest", "scipy", "matplotlib", "numpy", "scikit-learn"
 ]
 
 [project.urls]
